@@ -2605,6 +2605,238 @@ def Epix_Config100aV1_to_str(obj, indent, lvl, methodSep):
     methodStrings = [meth for meth in methodStrings if len(meth)>0]
     return methodSep.join(methodStrings)
 
+def Epix_Config100aV2_to_str(obj, indent, lvl, methodSep):
+    assert obj.TypeId == psana.Epix.Config100aV2.TypeId
+    assert obj.Version == psana.Epix.Config100aV2.Version
+    methodStrings = []
+    # one_line_methods
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'version: %s' % uint32_to_str( obj.version() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'runTrigDelay: %s' % uint32_to_str( obj.runTrigDelay() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'daqTrigDelay: %s' % uint32_to_str( obj.daqTrigDelay() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'dacSetting: %s' % uint32_to_str( obj.dacSetting() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'acqToAsicR0Delay: %s' % uint32_to_str( obj.acqToAsicR0Delay() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'asicR0ToAsicAcq: %s' % uint32_to_str( obj.asicR0ToAsicAcq() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'asicAcqWidth: %s' % uint32_to_str( obj.asicAcqWidth() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'asicAcqLToPPmatL: %s' % uint32_to_str( obj.asicAcqLToPPmatL() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'asicPPmatToReadout: %s' % uint32_to_str( obj.asicPPmatToReadout() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'asicRoClkHalfT: %s' % uint32_to_str( obj.asicRoClkHalfT() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'adcReadsPerPixel: %s' % uint32_to_str( obj.adcReadsPerPixel() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'adcClkHalfT: %s' % uint32_to_str( obj.adcClkHalfT() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'asicR0Width: %s' % uint32_to_str( obj.asicR0Width() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'adcPipelineDelay: %s' % uint32_to_str( obj.adcPipelineDelay() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'prepulseR0Width: %s' % uint32_to_str( obj.prepulseR0Width() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'prepulseR0Delay: %s' % uint32_to_str( obj.prepulseR0Delay() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'digitalCardId0: %s' % uint32_to_str( obj.digitalCardId0() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'digitalCardId1: %s' % uint32_to_str( obj.digitalCardId1() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'analogCardId0: %s' % uint32_to_str( obj.analogCardId0() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'analogCardId1: %s' % uint32_to_str( obj.analogCardId1() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'carrierId0: %s' % uint32_to_str( obj.carrierId0() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'carrierId1: %s' % uint32_to_str( obj.carrierId1() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'numberOfAsicsPerRow: %s' % uint32_to_str( obj.numberOfAsicsPerRow() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'numberOfAsicsPerColumn: %s' % uint32_to_str( obj.numberOfAsicsPerColumn() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'numberOfRowsPerAsic: %s' % uint32_to_str( obj.numberOfRowsPerAsic() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'numberOfReadableRowsPerAsic: %s' % uint32_to_str( obj.numberOfReadableRowsPerAsic() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'numberOfPixelsPerAsicRow: %s' % uint32_to_str( obj.numberOfPixelsPerAsicRow() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'calibrationRowCountPerASIC: %s' % uint32_to_str( obj.calibrationRowCountPerASIC() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'environmentalRowCountPerASIC: %s' % uint32_to_str( obj.environmentalRowCountPerASIC() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'baseClockFrequency: %s' % uint32_to_str( obj.baseClockFrequency() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'asicMask: %s' % uint32_to_str( obj.asicMask() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'enableAutomaticRunTrigger: %s' % uint32_to_str( obj.enableAutomaticRunTrigger() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'numberOf125MhzTicksPerRunTrigger: %s' % uint32_to_str( obj.numberOf125MhzTicksPerRunTrigger() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'asicPixelConfigArray: %s' % ndarray_to_str( obj.asicPixelConfigArray() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'calibPixelConfigArray: %s' % ndarray_to_str( obj.calibPixelConfigArray() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'asicGR: %s' % uint8_to_str( obj.asicGR() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'asicAcq: %s' % uint8_to_str( obj.asicAcq() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'asicR0: %s' % uint8_to_str( obj.asicR0() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'asicPpmat: %s' % uint8_to_str( obj.asicPpmat() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'asicPpbe: %s' % uint8_to_str( obj.asicPpbe() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'asicRoClk: %s' % uint8_to_str( obj.asicRoClk() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'asicGRControl: %s' % uint8_to_str( obj.asicGRControl() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'asicAcqControl: %s' % uint8_to_str( obj.asicAcqControl() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'asicR0Control: %s' % uint8_to_str( obj.asicR0Control() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'asicPpmatControl: %s' % uint8_to_str( obj.asicPpmatControl() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'asicPpbeControl: %s' % uint8_to_str( obj.asicPpbeControl() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'asicR0ClkControl: %s' % uint8_to_str( obj.asicR0ClkControl() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'prepulseR0En: %s' % uint8_to_str( obj.prepulseR0En() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'adcStreamMode: %s' % uint32_to_str( obj.adcStreamMode() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'testPatternEnable: %s' % uint8_to_str( obj.testPatternEnable() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'SyncMode: %s' % uint8_to_str( obj.SyncMode() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'R0Mode: %s' % uint8_to_str( obj.R0Mode() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'SyncWidth: %s' % uint16_to_str( obj.SyncWidth() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'SyncDelay: %s' % uint16_to_str( obj.SyncDelay() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'scopeEnable: %s' % uint8_to_str( obj.scopeEnable() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'scopeTrigEdge: %s' % uint8_to_str( obj.scopeTrigEdge() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'scopeTrigChan: %s' % uint8_to_str( obj.scopeTrigChan() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'scopeArmMode: %s' % uint8_to_str( obj.scopeArmMode() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'scopeADCThreshold: %s' % uint16_to_str( obj.scopeADCThreshold() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'scopeTrigHoldoff: %s' % uint16_to_str( obj.scopeTrigHoldoff() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'scopeTrigOffset: %s' % uint16_to_str( obj.scopeTrigOffset() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'scopeTraceLength: %s' % uint16_to_str( obj.scopeTraceLength() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'scopeADCsameplesToSkip: %s' % uint16_to_str( obj.scopeADCsameplesToSkip() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'scopeChanAwaveformSelect: %s' % uint8_to_str( obj.scopeChanAwaveformSelect() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'scopeChanBwaveformSelect: %s' % uint8_to_str( obj.scopeChanBwaveformSelect() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'numberOfRows: %s' % uint32_to_str( obj.numberOfRows() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'numberOfReadableRows: %s' % uint32_to_str( obj.numberOfReadableRows() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'numberOfColumns: %s' % uint32_to_str( obj.numberOfColumns() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'numberOfCalibrationRows: %s' % uint32_to_str( obj.numberOfCalibrationRows() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'numberOfEnvironmentalRows: %s' % uint32_to_str( obj.numberOfEnvironmentalRows() )
+    methodStrings.append(methodStr)                                 
+    methodStr = doIndent(indent, lvl)
+    methodStr += 'numberOfAsics: %s' % uint32_to_str( obj.numberOfAsics() )
+    methodStrings.append(methodStr)                                 
+    # idx_list_multi_line_methods
+    methodStr = ''
+    numObjs = obj.numberOfAsicsPerRow()*obj.numberOfAsicsPerColumn()
+    for idx in range( numObjs ):
+        subObj = obj.asics(idx)
+        methodStr += doIndent(indent, lvl)
+        methodStr += 'asics[%d]:\n' % idx
+        methodStr += Epix_Asic100aConfigV1_to_str(subObj, indent, lvl+1, methodSep)
+        if idx+1 < numObjs:
+            methodStr += '\n'
+    methodStrings.append(methodStr)
+    methodStrings = [meth for meth in methodStrings if len(meth)>0]
+    return methodSep.join(methodStrings)
+
 def Epix_ElementV1_to_str(obj, indent, lvl, methodSep):
     assert obj.TypeId == psana.Epix.ElementV1.TypeId
     assert obj.Version == psana.Epix.ElementV1.Version
@@ -8057,6 +8289,7 @@ objFunctionTable = {
     (psana.Encoder.DataV1.TypeId,1) : Encoder_DataV1_to_str,
     (psana.Encoder.DataV2.TypeId,2) : Encoder_DataV2_to_str,
     (psana.Epix.Config100aV1.TypeId,1) : Epix_Config100aV1_to_str,
+    (psana.Epix.Config100aV2.TypeId,2) : Epix_Config100aV2_to_str,
     (psana.Epix.Config10KV1.TypeId,1) : Epix_Config10KV1_to_str,
     (psana.Epix.ConfigV1.TypeId,1) : Epix_ConfigV1_to_str,
     (psana.Epix.ElementV1.TypeId,1) : Epix_ElementV1_to_str,
